[package]
name = "geobrowser"
version = "0.1.0"
authors = ["gmdEzreal <gmdezreal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.13.0"
